# zdos-mesh

./: .gitignore  autobuild-vps-only.sh  deploy-to-vps.sh  package-lock.json  package.json
agents/Z-GENESIS-AAAK/: CONTRIBUTING.md  README.md  SECURITY.md  agent.yml  pyproject.toml
agents/Z-GENESIS-AAAK/aaak/: __init__.py  core.py
agents/Z-GENESIS-AAAK/aaak.egg-info/: PKG-INFO  SOURCES.txt
agents/Z-GENESIS-AAAK/docs/: OVERVIEW.md
agents/Z-GENESIS-AAAK/docs/wiki/: Architecture.md  Home.md
agents/Z-GENESIS-AAAK/tests/: test_aaak_v2.py
agents/ZCoin/: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  agent.yml  derive.js  fix_highbridgechain.sh  install-zdos-node.sh  nohup.out  package-lock.json  package.json
agents/ZCoin/consensus/: config.json
agents/ZCoin/docs/: explorer.html  index.html  miner.html  nodes.html  roadmap.html  wallet.html  zlang.html
agents/ZCoin/genesis/: genesis.json  mainnet.json
agents/ZCoin/node/: Cargo.toml
agents/ZCoin/p2p/: config.json
agents/ZCoin/runtime/: system.reward.zlang  system.tx.apply.zlang
agents/ZCoin/specs/: block_format.json  consensus_rules.json  genesis.json  mempool.json  peer_protocol.json
agents/high-bridgechain/: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  agent.yml
agents/high-bridgechain/docs/: consensus-spec.md  zunit-bridgez-spec.md
agents/high-bridgechain/node/: Cargo.toml  autofix.sh  reset_full.sh  reset_node.sh
agents/high-bridgechain/protocol/: Cargo.toml
agents/high-bridgechain/rpc/: Cargo.toml
agents/high-bridgechain/runtime/: system.tx.validator.zlang
hub/: index.js  (+4 more)
(+709 files in other folders)
