[workspace]
members = [
    "node",
    "protocol",
    "tools/bridgez-cli",
    "tools/block-explorer-lite"
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
sha2 = "0.10"
rand = "0.8"
